--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <version>5.14.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
