--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
         </dependency>
 
 
+    
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>3.0.0</version>
+      </dependency>
     </dependencies>
     <build>
         <plugins>
